<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.TrackingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search_icon"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/track_amp_trace"
                    style="@style/CustomTitleStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/trackNumber_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/track_number_hint_text"
                    android:background="@drawable/rounded_edit_text"
                    android:textIsSelectable="true"
                    android:textEditPasteWindowLayout="@color/color_gray"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapCharacters"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:shadowColor="@color/color_gray_2"
                    android:layout_weight="1"
                    android:textColorHighlight="@color/text_color_gray"/>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:elevation="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/track_button_text"
                    android:textColor="@color/text_color_white"
                    android:layout_weight="2"
                    android:textAllCaps="false"/>

            </LinearLayout>





        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/connection_failed_txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Connection failed please try again"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/text_color_black"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_tracking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressTint="@color/color_yellow"
                android:indeterminate="false"
                android:indeterminateBehavior="cycle"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>